--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "git",
   "version": "1.0.0",
   "description": "Лабораторные по Node.js в ММосковском политехе",
-  "main": "app.js",
+  "main": "index.js",
+  "engines": {
+    "node": ">=14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon app.js",
-    "start_server": "node app.js"
+    "serve": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
